--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#c8d5ab</color>
+    <color name="colorPrimaryDark">#97a47c</color>
+    <color name="colorPrimaryLight">#fbffdd</color>
+    <color name="colorPrimaryText">#000000</color>
     <color name="colorAccent">#D81B60</color>
 </resources>
