XML file parsing added

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -28,6 +28,15 @@
         <argument
             android:name="songResourceName"
             app:argType="string" />
+        <argument
+            android:name="coverResourceName"
+            app:argType="string" />
+        <argument
+            android:name="notes"
+            app:argType="string" />
+        <argument
+            android:name="tacts"
+            app:argType="string" />
     </fragment>
 
 </navigation>
