--- a/app/src/main/res/menu/song_pressed_menu.xml
+++ b/app/src/main/res/menu/song_pressed_menu.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item android:title="delete" />
+    <item android:title="@string/remove_song_context_menu_item" />
 </menu>
