--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/nav_song_chooser"
         android:name="com.example.student.myapplication.SongChooserFragment"
-        android:label="@string/song_chooser"
+        android:label="@string/song_chooser_menu_item"
         tools:layout="@layout/song_chooser_fragment" >
         <action
             android:id="@+id/action_nav_song_chooser_to_nav_played_song"
@@ -21,7 +21,7 @@
     <fragment
         android:id="@+id/nav_played_song"
         android:name="com.example.student.myapplication.PlayedSongFragment"
-        android:label="@string/played_song"
+        android:label="@string/played_song_menu_item"
         tools:layout="@layout/played_song_fragment" >
         <argument
             android:name="artist"
@@ -46,7 +46,7 @@
     <fragment
         android:id="@+id/nav_add_song"
         android:name="com.example.student.myapplication.AddSongFragment"
-        android:label="@string/add_song" >
+        android:label="@string/add_song_menu_item" >
         <action
             android:id="@+id/action_nav_add_song_to_nav_played_song"
             app:destination="@id/nav_played_song" />
