--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,6 +2,9 @@
 <resources>
     <declare-styleable name="NotesView">
         <attr name="markPosition" format="integer"/>
+
+        <attr name="borderColor" format="color"/>
+        <attr name="borderThickness" format="float"/>
     </declare-styleable>
 
 </resources>
