--- a/app/src/main/res/layout-land/song_chooser_fragment.xml
+++ b/app/src/main/res/layout-land/song_chooser_fragment.xml
@@ -19,6 +19,7 @@
         android:id="@+id/songsGridView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
