--- a/app/src/main/res/layout/played_song_fragment.xml
+++ b/app/src/main/res/layout/played_song_fragment.xml
@@ -11,7 +11,9 @@
     <HorizontalScrollView
         android:id="@+id/horizontalScroll"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="wrap_content"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
         android:scrollbars="none"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,7 +23,11 @@
         <com.example.student.myapplication.NotesView
             android:id="@+id/notesView"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="250dp"
+            android:paddingTop="40dp"
+            android:paddingBottom="40dp"
+            app:borderColor="#000000"
+            app:borderThickness="20"
             app:markPosition="0" />
     </HorizontalScrollView>
 
@@ -53,7 +59,7 @@
         android:id="@+id/playPauseButton"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginBottom="92dp"
+        android:layout_marginBottom="56dp"
         android:adjustViewBounds="false"
         android:background="@color/ic_play_background"
         android:scaleType="fitEnd"
