--- a/app/src/main/res/drawable-v21/side_nav_bar.xml
+++ b/app/src/main/res/drawable-v21/side_nav_bar.xml
@@ -1,9 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="135"
-        android:centerColor="#009688"
-        android:endColor="#00695C"
-        android:startColor="#4DB6AC"
+        android:angle="180"
+        android:centerColor="#637381"
+        android:endColor="#505C66"
+        android:startColor="#78909c"
         android:type="linear" />
 </shape>
