--- a/app/src/main/res/layout/arcade_fragment.xml
+++ b/app/src/main/res/layout/arcade_fragment.xml
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="0.351"
         tools:layout_editor_absoluteX="0dp">
 
-        <com.example.student.myapplication.NotesView
+        <com.example.student.myapplication.views.NotesView
             android:id="@+id/notesView"
             android:layout_width="wrap_content"
             android:layout_height="250dp"
