--- a/app/src/main/res/layout/played_song_fragment.xml
+++ b/app/src/main/res/layout/played_song_fragment.xml
@@ -20,7 +20,7 @@
         app:layout_constraintVertical_bias="0.5"
         tools:layout_editor_absoluteX="-16dp">
 
-        <com.example.student.myapplication.NotesView
+        <com.example.student.myapplication.views.NotesView
             android:id="@+id/notesView"
             android:layout_width="wrap_content"
             android:layout_height="250dp"
